height fix on mobile??

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  height: 100vh;
+  height: 100%;
   min-height: 0;
   display: flex;
   flex-direction: column;
@@ -20,7 +20,7 @@
 }
 
 .App-body {
-  min-height: 100vh;
+  min-height: 0;
   display: flex;
   height: 100%;
   width: 100%;
